crates/rspack_error/tests/fixtures/recoverable_syntax_error/fixtures__recoverable_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: recoverable_syntax_error
---
error[tsx]: TSX parsing error
  ┌─ tests/fixtures/recoverable_syntax_error/index.tsx:1:23
  │
1 │ let c = <test>() => {}</test>;
  │                       ^ Expected a semicolon
2 │ 

error[tsx]: TSX parsing error
  ┌─ tests/fixtures/recoverable_syntax_error/index.tsx:1:24
  │
1 │ let c = <test>() => {}</test>;
  │                        ^ Expression expected
2 │ 


